@@ -51,6 +51,7 @@ easier to use. The changes are:
 - CELT in Ogg demuxing
 - VC-1 interlaced decoding
 - lut, lutrgb, and lutyuv filters
+- boxblur filter
 
 
 version 0.7:
